Backend: Correct users api and update swagger
